--- a/HelloWorld/SearchViewController.xib
+++ b/HelloWorld/SearchViewController.xib
@@ -48,10 +48,10 @@
                                 </connections>
                             </barButtonItem>
                             <barButtonItem key="rightBarButtonItem" style="plain" id="kkR-C2-46P">
-                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nPb-zd-x0e">
-                                    <rect key="frame" x="-23" y="-15" width="71" height="30"/>
+                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="nPb-zd-x0e">
+                                    <rect key="frame" x="254" y="7" width="30" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" title="Button">
+                                    <state key="normal" image="camera.png">
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
                                     <connections>
@@ -85,6 +85,7 @@
     </objects>
     <resources>
         <image name="background1.png" width="1200" height="1920"/>
+        <image name="camera.png" width="128" height="128"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
