--- a/HelloWorld/FolderViewController.xib
+++ b/HelloWorld/FolderViewController.xib
@@ -49,6 +49,10 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Yls-XP-ch2">
                     <rect key="frame" x="0.0" y="132" width="320" height="436"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="XI5-ia-iGD"/>
+                        <outlet property="delegate" destination="-1" id="UIL-fQ-nOk"/>
+                    </connections>
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
