--- a/HelloWorld/APPViewController.xib
+++ b/HelloWorld/APPViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
         <development version="6200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="APPViewController">
@@ -67,7 +67,7 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <items>
                         <navigationItem title="Document Import" id="4iY-xz-Etg">
-                            <barButtonItem key="leftBarButtonItem" image="close.png" style="done" id="Ao3-Tf-2tE">
+                            <barButtonItem key="leftBarButtonItem" image="back1.png" style="done" id="Ao3-Tf-2tE">
                                 <connections>
                                     <action selector="backbutton:" destination="-1" id="xJl-Fe-JeP"/>
                                 </connections>
@@ -105,8 +105,8 @@
     </objects>
     <resources>
         <image name="Upload.png" width="638" height="452"/>
+        <image name="back1.png" width="25" height="25"/>
         <image name="background1.png" width="1200" height="1920"/>
-        <image name="close.png" width="29" height="29"/>
         <image name="folder_add.png" width="225" height="225"/>
         <image name="photo1.png" width="204" height="204"/>
     </resources>
