--- a/HelloWorld/IndexViewController.xib
+++ b/HelloWorld/IndexViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <development version="6000" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IndexViewController">
@@ -23,7 +23,7 @@
                     <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                     <items>
                         <navigationItem title="Document Import" id="n4x-3D-sbb">
-                            <barButtonItem key="leftBarButtonItem" image="close.png" style="done" id="xbu-1m-6x1">
+                            <barButtonItem key="leftBarButtonItem" image="back1.png" style="done" id="xbu-1m-6x1">
                                 <connections>
                                     <action selector="BackBtn:" destination="-1" id="19N-Bd-brm"/>
                                 </connections>
@@ -46,9 +46,9 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jhO-rV-uAp">
-                    <rect key="frame" x="261" y="86" width="46" height="30"/>
-                    <state key="normal" title="Next">
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jhO-rV-uAp">
+                    <rect key="frame" x="261" y="86" width="63" height="25"/>
+                    <state key="normal" image="next.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -61,8 +61,9 @@
         </view>
     </objects>
     <resources>
+        <image name="back1.png" width="25" height="25"/>
         <image name="background1.png" width="1200" height="1920"/>
-        <image name="close.png" width="29" height="29"/>
+        <image name="next.png" width="25" height="25"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
