--- a/HelloWorld/PopupView.xib
+++ b/HelloWorld/PopupView.xib
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchViewController">
             <connections>
                 <outlet property="SView" destination="e1h-EE-g7o" id="TW9-Zb-kCL"/>
+                <outlet property="Swipe" destination="a3Z-PQ-UeG" id="b0R-AF-xis"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -75,7 +76,11 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="235" y="236"/>
         </view>
-        <swipeGestureRecognizer direction="left" id="a3Z-PQ-UeG"/>
+        <swipeGestureRecognizer direction="left" id="a3Z-PQ-UeG">
+            <connections>
+                <outlet property="delegate" destination="-1" id="NhW-Te-nOk"/>
+            </connections>
+        </swipeGestureRecognizer>
     </objects>
     <resources>
         <image name="BAckground.png" width="720" height="1280"/>
